--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
                 src="images/images/female/eat-healthy-food-png-transparent-eat-healthy-foodpng-images-woman-eating-png-480_319-removebg-preview.png"
                 alt=""></div>
     </section>
+
+    <section class="About Me">
+
+        <div class="half-width">
+            <img src="images/images/female/Person Image.png" alt="">
+            <div class="half-width">
+                <h1>About Me</h1>
+                <p>Should you or shouldn't you put the effort into crafting your perfect 'About Me' page? Here are a few
+                    reasons why you
+                    should (and maybe shouldn't) spend the time.</p>
+                <a class="link-button" target="_blank" href="">Contact Me</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
